welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
while (getX != 19 || getY != 1)
{while (!estSurBiscuit)
{if (getX=19 && getY=1) {}
	else {recule()}
	}
prendBiscuit()
while (!estSurBiscuit)
{avance()}
recule()
recule()
poseBiscuit()
}
gauche()
avance()
gauche()
avance()